integration_tests/codegen_fail/fail/scalar/derive_unit_struct.rs
use juniper::GraphQLScalar;

#[derive(GraphQLScalar)]
struct ScalarSpecifiedByUrl;

fn main() {}
